created  simple service to demonstrate angular DI

--- a/src/app/custom-components/demo/demo.component.html
+++ b/src/app/custom-components/demo/demo.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="modal-body">
       <p>Modal body text goes here.</p>
+      <button (click)="sayHi()" type="button" class="btn btn-success">Say Hello 1</button>
       <router-outlet></router-outlet>
     </div>
     <div class="modal-footer">
