Create separate path changing and query chaning demo functionality. Added some content to slides component with basic info andd demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
         <span>spartacus-modules-demo app is running!</span>
     </div>
 </cx-storefront>
+
+<!-- <ng-template cxOutletRef="BottomHeaderSlot">
+
+</ng-template> -->
