--- a/src/app/custom-components/demo-home-page/demo-home-page.component.html
+++ b/src/app/custom-components/demo-home-page/demo-home-page.component.html
@@ -1,5 +1,4 @@
-<div class="Section">
-<p>demo-home-page works!</p>
-<button (click)="sayHi()" type="button" class="btn btn-success">Say Hello</button>
+<div class="Section d-flex justify-content-center">
+<button (click)="sayHi()" type="button" class="btn btn-success">demo-home-page</button>
 </div>
 
