--- a/src/app/custom-components/demo/slides/slides.component.html
+++ b/src/app/custom-components/demo/slides/slides.component.html
@@ -2,7 +2,7 @@
   <div [ngSwitch]="seletedSlide" class="mt-3">
     <ng-container *ngSwitchCase="1">
       <div>
-        <h2 class="text-center">O czym będzie mowa?</h2>
+        <h2 class="text-center">Spis treści - czyli o czym będzie mowa</h2>
         <ol>
           <li>
             <a [routerLink]="[]" [queryParams]="{ slide: '2' }"
@@ -16,18 +16,18 @@
             >
           </li>
           <li>
-            <a [routerLink]="[]" [queryParams]="{ slide: '4' }">
+            <a [routerLink]="[]" [queryParams]="{ slide: '4' }"
+              >Integracja modułów/komponentów w Spartacus SmartEdit.</a
+            >
+          </li>
+          <li>
+            <a [routerLink]="[]" [queryParams]="{ slide: '5' }">
               Module Injector Tree</a
             >
           </li>
           <li>
-            <a [routerLink]="[]" [queryParams]="{ slide: '5' }"
-              >Demo zależności modułów.</a
-            >
-          </li>
-          <li>
             <a [routerLink]="[]" [queryParams]="{ slide: '6' }"
-              >Integracja modułów/komponentów w Spartacus SmartEdit.</a
+              >Demo zależności modułów.</a
             >
           </li>
         </ol>
@@ -118,7 +118,7 @@
         komponent, angular CLI samo zadeklaruje nam komponent w najbliżym
         module. Przykładowo komenga ng g c nazwa_komponentu utworzy komponent z
         plikami styli, html, ts i plikiem spec.ts zawierającym testy jednostkowe
-        dla danego komponeentu.
+        dla danego komponentu.
       </p>
       <div>
         <code>
@@ -126,7 +126,7 @@
         </code>
       </div>
     </ng-container>
-    <ng-container *ngSwitchCase="4">
+    <ng-container *ngSwitchCase="5">
       <h2 class="text-center">Module Injector Tree</h2>
       <p class="text-center">
         Angular tworzy hierarchie modułów dla usług, które mają być dostarczane
@@ -154,7 +154,7 @@
       </p>
     </ng-container>
 
-    <ng-container *ngSwitchCase="5">
+    <ng-container *ngSwitchCase="6">
       <h2 class="text-center">Demo zależności modułów</h2>
       <p class="text-center">
         Angular tworzy hierarchie modułów dla usług, które mają być dostarczane
@@ -166,7 +166,7 @@
         </button>
       </div>
     </ng-container>
-    <ng-container er *ngSwitchCase="6">
+    <ng-container er *ngSwitchCase="4">
       <h2>Integracja modułów/komponentów w Spartacus SmartEdit.</h2>
       <p>
         Przejdźmy teraz do momentu umieszczenia utworzonego wcześniej komponentu
